feat: implement event gateway service and account management infrastructure with integration tests